done first 3 querys

--- a/food_hygiene_rating/NoSQL_setup_starter.ipynb
+++ b/food_hygiene_rating/NoSQL_setup_starter.ipynb
@@ -528,10 +528,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 4091, 'nModified': 4091, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -540,22 +551,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 38786, 'nModified': 34656, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({},[\n",
+    "    {\n",
+    "        '$set':{\n",
+    "            \"RatingValue\":{'$toInt':\"$RatingValue\"}\n",
+    "            }\n",
+    "    }\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0deacaf9",
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
+      " 'AddressLine2': 'Warren Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
+      " 'BusinessType': 'School/college/university',\n",
+      " 'BusinessTypeID': 7845,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.871474174837,\n",
+      " 'FHRSID': 289353,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6QH',\n",
+      " 'RatingDate': '2016-09-13T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': 5,\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('654ce78f3fab01aaf08b5767'),\n",
+      " 'geocode': {'latitude': 51.085797, 'longitude': 1.194762},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "pprint(establishments.find_one())\n"
    ]
   }
  ],
