--- a/food_hygiene_rating/NoSQL_setup_starter.ipynb
+++ b/food_hygiene_rating/NoSQL_setup_starter.ipynb
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Pines Garden',\n",
-      " 'AddressLine2': 'Beach Road',\n",
-      " 'AddressLine3': 'St Margarets Bay',\n",
+      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
+      " 'AddressLine2': 'Warren Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
       " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Tea Room',\n",
-      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': 1,\n",
+      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
+      " 'BusinessType': 'School/college/university',\n",
+      " 'BusinessTypeID': 7845,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.362402580997,\n",
-      " 'FHRSID': 551803,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000070948',\n",
-      " 'LocalAuthorityCode': '182',\n",
-      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-      " 'LocalAuthorityName': 'Dover',\n",
-      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'Distance': 4591.871474174837,\n",
+      " 'FHRSID': 289353,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DZ',\n",
-      " 'RatingDate': '2021-08-17T00:00:00',\n",
+      " 'PostCode': 'CT19 6QH',\n",
+      " 'RatingDate': '2016-09-13T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('654ce78f3fab01aaf08b5482'),\n",
-      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/551803',\n",
+      " '_id': ObjectId('654ce78f3fab01aaf08b5767'),\n",
+      " 'geocode': {'latitude': 51.085797, 'longitude': 1.194762},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('654cee6312964856373fb027'), acknowledged=True)"
+       "InsertOneResult(ObjectId('654ee05ec21272d36f075259'), acknowledged=True)"
       ]
      },
      "execution_count": 9,
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('654cee6312964856373fb027'), 'BusinessName': 'Penang Flavours', 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': '', 'AddressLine1': 'Penang Flavours', 'AddressLine2': '146A Plumstead Rd', 'AddressLine3': 'London', 'AddressLine4': '', 'PostCode': 'SE18 7DY', 'Phone': '', 'LocalAuthorityCode': '511', 'LocalAuthorityName': 'Greenwich', 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk', 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk', 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''}, 'SchemeType': 'FHRS', 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'}, 'RightToReply': '', 'Distance': 4623.972328074718, 'NewRatingPending': True}\n"
+      "{'_id': ObjectId('654cee6312964856373fb027'), 'BusinessName': 'Penang Flavours', 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': 1, 'AddressLine1': 'Penang Flavours', 'AddressLine2': '146A Plumstead Rd', 'AddressLine3': 'London', 'AddressLine4': '', 'PostCode': 'SE18 7DY', 'Phone': '', 'LocalAuthorityCode': '511', 'LocalAuthorityName': 'Greenwich', 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk', 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk', 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''}, 'SchemeType': 'FHRS', 'geocode': {'longitude': 0.08384, 'latitude': 51.490142}, 'RightToReply': '', 'Distance': 4623.972328074718, 'NewRatingPending': True, 'RatingValue': None}\n",
+      "{'_id': ObjectId('654ee05ec21272d36f075259'), 'BusinessName': 'Penang Flavours', 'BusinessType': 'Restaurant/Cafe/Canteen', 'BusinessTypeID': '', 'AddressLine1': 'Penang Flavours', 'AddressLine2': '146A Plumstead Rd', 'AddressLine3': 'London', 'AddressLine4': '', 'PostCode': 'SE18 7DY', 'Phone': '', 'LocalAuthorityCode': '511', 'LocalAuthorityName': 'Greenwich', 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk', 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk', 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''}, 'SchemeType': 'FHRS', 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'}, 'RightToReply': '', 'Distance': 4623.972328074718, 'NewRatingPending': True}\n"
      ]
     }
    ],
@@ -366,28 +367,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "39780"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
-    "Total_documents=establishments.count_documents({})\n",
-    "Total_documents"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "id": "768474a6",
    "metadata": {},
@@ -419,9 +398,6 @@
    "source": [
     "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
     "query={'LocalAuthorityName':'Dover'}\n",
-    "#results=establishments.find(query)\n",
-    "#for result in results:\n",
-    "#    print(result)\n",
     "establishments.delete_many(query)\n",
     "results=establishments.find(query)\n",
     "for result in results:\n",
@@ -453,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -461,13 +437,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('654ce78f3fab01aaf08b5767'), 'FHRSID': 289353, 'ChangesByServerID': 0, 'LocalAuthorityBusinessID': 'PI/000002468', 'BusinessName': 'St Marys COE (aided) Primary School', 'BusinessType': 'School/college/university', 'BusinessTypeID': 7845, 'AddressLine1': 'St Marys Church Of England Primary School', 'AddressLine2': 'Warren Road', 'AddressLine3': 'Folkestone', 'AddressLine4': 'Kent', 'PostCode': 'CT19 6QH', 'Phone': '', 'RatingValue': '5', 'RatingKey': 'fhrs_5_en-gb', 'RatingDate': '2016-09-13T00:00:00', 'LocalAuthorityCode': '188', 'LocalAuthorityName': 'Folkestone and Hythe', 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk', 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk', 'scores': {'Hygiene': 0, 'Structural': 0, 'ConfidenceInManagement': 0}, 'SchemeType': 'FHRS', 'geocode': {'longitude': '1.194762', 'latitude': '51.085797'}, 'RightToReply': '', 'Distance': 4591.871474174837, 'NewRatingPending': False, 'meta': {'dataSource': None, 'extractDate': '0001-01-01T00:00:00', 'itemCount': 0, 'returncode': None, 'totalCount': 0, 'totalPages': 0, 'pageSize': 0, 'pageNumber': 0}, 'links': [{'rel': 'self', 'href': 'https://api.ratings.food.gov.uk/establishments/289353'}]}\n"
+      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
+      " 'AddressLine2': 'Warren Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
+      " 'BusinessType': 'School/college/university',\n",
+      " 'BusinessTypeID': 7845,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4591.871474174837,\n",
+      " 'FHRSID': 289353,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT19 6QH',\n",
+      " 'RatingDate': '2016-09-13T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': 5,\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('654ce78f3fab01aaf08b5767'),\n",
+      " 'geocode': {'latitude': 51.085797, 'longitude': 1.194762},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
    "source": [
     "# Check that other documents remain with 'find_one'\n",
-    "print(db.establishments.find_one())"
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
